# Reaction-Role

./: .gitignore  bot_dev_start.example.bat
bot/: Cargo.toml
bot/src/: main.rs  modules.rs
bot/src/modules/: reaction.rs
