[package]
name = "reaction_role_bot"
version = "0.1.0"
authors = ["Arthurdw <mail@arthurdw.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
